KDE_LANG = en
KDE_MANS = AUTO

# This is needed for building with a different --prefix from the rest of KDE
# choose one for your distribution
#KDE_XSL_MAN_STYLESHEET = /usr/share/apps/ksgmltools2/customization/kde-man.xsl
KDE_XSL_MAN_STYLESHEET = /opt/kde3/share/apps/ksgmltools2/customization/kde-man.xsl
